--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.9"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -20,6 +23,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.14.0"
   }
 }
