--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.9"
+    "sequelize": "^5.21.9",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
