--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "pg": "^8.2.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.9",
