--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.15.5",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
@@ -24,6 +26,7 @@
     "pg": "^8.2.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.9",
+    "youch": "^2.0.10",
     "yup": "^0.28.5"
   },
   "devDependencies": {
